--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL="mongodb://monty:pass@db:27017/mydatabase?authSource=admin&directConnection=true"
+      DATABASE_URL: "mongodb://monty:pass@db:27017/mydatabase?authSource=admin&directConnection=true"
   db: 
     image: prismagraphql/mongo-single-replica:5.0.3
     ports:
